src/index.css
body {
  margin: 0;
  height: 100vh;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.wd-color-white {
  color: white;
}

.wd-float-right {
  position: relative;
  float: right;
}
.wd-card-width {
  max-width: 20rem;
}

.wd-rounded-corners-white {
  border-radius: 30px;
  border: medium solid white;
}

